test/tests/stages/5_local_variables/valid/extra_credit/incr_expression_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[44]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  int
  identifier(b)
  =
  const int(0)
  ;
  identifier(a)
  ++
  ;
  ++
  identifier(a)
  ;
  ++
  identifier(a)
  ;
  identifier(b)
  --
  ;
  --
  identifier(b)
  ;
  return
  (
  identifier(a)
  ==
  const int(3)
  &&
  identifier(b)
  ==
  -
  const int(2)
  )
  ;
  }
