test/tests/stages/5_local_variables/invalid_semantics/invalid_lvalue_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  !
  identifier(a)
  =
  const int(3)
  ;
  return
  identifier(a)
  ;
  }
